Mid Update Front

--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -55,3 +55,8 @@
 .offcanvas.offcanvas-end {
     width: 35vw!important;
 }
+
+.offcanvas ul li a:hover,
+.offcanvas ul li a:focus  {
+        color: #b0b8bf!important;
+}
