--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -11,9 +11,12 @@
     height: 100vh!important;
 }
 
-#home p, 
 #home h1 {
     margin-top: 150px!important;
+}
+
+#home p {
+    margin-top: 100px!important;
 }
 
 #homeDescription {
