--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,7 +1,7 @@
 {% block footer %}
+<a href="#"><img src="{{ asset('logo2.png') }}" id="logo"></a>
 <nav class="navbar fixed-top" aria-label="Light offcanvas navbar">
     <div class="container-fluid g-0">
-      <a class="navbar-brand m-0 p-0" href="/"><img id="logo" src="{{ asset('logo2.png') }}"></a>
       <div class="square rounded" id="menuButton">
         <button class="navbar-toggler me-3 border-0 shadow-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarDark" aria-controls="offcanvasNavbarDark" aria-label="Toggle navigation">
           <span class="text-white">Menu</span>
@@ -40,7 +40,6 @@
           </ul>
         </div>
       </div>
-  
     </div>
   </nav>
   {% endblock %}
