--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -7,14 +7,14 @@
         <div class="col-6" id="homeDescription" style="background-image: url('{{ asset("test.jpg") }}')">
             <h1 class="display-4 fst-italic text-center text-white">La Clunysoise c'est</h1>
             <section class="text-center" id="compteur">
-                <span class="countText"><span class="count">421</span> Interventions</span>
-                <span class="countText"><span class="count">45</span> Urgences</span>
-                <span class="countText"><span class="count">28</span> Salarié</span>
-                <span class="countText"><span class="count">5</span> Ambualnces</span>
-                <span class="countText"><span class="count">10</span> VSL</span>
-                <span class="countText"><span class="count">8</span> Taxi</span>
+                <span class="countText fw-bold"><span class="count fw-bold">421 </span> Intervention ainsi que </span>
+                <span class="countText fw-bold"><span class="count fw-bold">45 </span> Urgences par jour,</span>
+                <span class="countText fw-bold"><span class="count fw-bold">28 </span> Salarié </span>
+                <span class="countText fw-bold"><span class="count fw-bold">5 </span> Ambulances </span>
+                <span class="countText fw-bold"><span class="count fw-bold">10 </span> VSL </span>
+                <span class="countText fw-bold"><span class="count fw-bold">8 </span> Taxi</span>
               </section>
-            <p class="lead text-center text-white">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
+            <p class="lead text-center text-white pe-5 ps-5">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
         </div>
 
         <div class="col-6">
