--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -9,7 +9,9 @@
     padding-top: 30px!important;
 }
 
-#logo {
+#logoHead {
+    width: 200px;
+    height: auto;
     position: fixed!important;
 }
 
@@ -23,7 +25,7 @@
     font-size: 1.5rem;
 }
 
-#menuButton {
+.menuButton {
     background-color: #0059C6!important;
 }
 
