--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,8 +1,8 @@
 {% block footer %}
-<a href="#"><img src="{{ asset('logo2.png') }}" id="logo"></a>
+<a href="#"><img src="{{ asset('logo2.png') }}" id="logoHead"></a>
 <nav class="navbar fixed-top" aria-label="Light offcanvas navbar">
     <div class="container-fluid g-0">
-      <div class="square rounded" id="menuButton">
+      <div class="square rounded menuButton">
         <button class="navbar-toggler me-3 border-0 shadow-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarDark" aria-controls="offcanvasNavbarDark" aria-label="Toggle navigation">
           <span class="text-white">Menu</span>
           <span class="navbar-toggler-icon"></span>
