--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -20,7 +20,9 @@
 
         <div class="col-6">
 
-        <div id="contact">
+        {{ form(formulaire)}}
+
+        {# <div id="contact">
         <form>
 
             <div class="input-group mb-5">
@@ -48,7 +50,7 @@
             </div>
 
         </form>
-        </div>
+        </div> #}
 
 
         </div>
