--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -1,11 +1,15 @@
 {% extends 'base.html.twig' %}
 
+
 {% block body %}
 
 
 <h1 class="text-center"> Vos Rendez - vous </h1>
 
+<div class="example-wrapper">
 
+{{ form(formulaire)}}
 
+</div>
 
-{% endblock %} 
+{% endblock %}
