--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -7,16 +7,14 @@
     
     <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top justify-content-center" id="footer">
 
-        <div class="col mb-3 pCol">
-            <a href="/" class="mb-3 link-body-emphasis text-decoration-none">
-                <img class="pb-3" id="logo" src="{{ asset('Logo_T.png') }}">
-            </a>
+        <div class="col-lg-4 mb-3 pCol">
+            <img class="pb-3" id="logo" src="{{ asset('footerLogo.png') }}">
             <p class="nav-item mb-2"><a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary">7 Avn.Pierre le Vénérable, 71250 Cluny</a></p>
             <p class="text-body-secondary">&copy; 2023</p>
         </div>
 
 
-        <div class="col mb-3 pCol">
+        <div class="col-lg-4 mb-3 pCol">
             <h5>Coordonnées</h5>
             <hr class="border border-white opacity-100 border-1 ms-5 me-5">
             <ul class="nav flex-column">
@@ -26,7 +24,7 @@
             </ul>
         </div>
 
-        <div class="col mb-3 pCol">
+        <div class="col-md-lg 4-3 pCol">
             <h5>Informations</h5>
             <hr class="border border-white opacity-100 border-1 ms-5 me-5">
             <ul class="nav flex-column">
