--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,5 +1,5 @@
 {% block footer %}
-<a href="#"><img src="{{ asset('logo2.png') }}" id="logoHead"></a>
+<a href="/"><img src="{{ asset('logo2.png') }}" id="logoHead"></a>
 <nav class="navbar fixed-top" aria-label="Light offcanvas navbar">
     <div class="container-fluid g-0">
       <div class="square rounded menuButton">
@@ -11,7 +11,20 @@
   
       <div class="offcanvas offcanvas-end text-bg-Light" tabindex="-1" id="offcanvasNavbarDark" aria-labelledby="offcanvasNavbarDarkLabel">
         <div class="offcanvas-body pt-5">
-          <img src="{{ asset('ClunyTextWhite.png') }}" id="menuLogo">
+
+
+{# GALERE #}
+            <img src="{{ asset('ClunyTextWhite.png') }}" id="menuLogo">
+            <div class="square rounded menuButtonIn">
+              <button class="navbar-toggler me-3 border-0 shadow-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarDark" aria-controls="offcanvasNavbarDark" aria-label="Toggle navigation">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="#0059C6" class="bi bi-x" viewBox="0 0 16 16">
+                  <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                </svg>
+              </button>
+            </div>
+
+
+
           <hr class="border border-white opacity-100 border-1 m-5">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 pt-5 ps-3">
             <li class="nav-item">
