--- a/assets/styles/_footer.scss
+++ b/assets/styles/_footer.scss
@@ -5,8 +5,7 @@
 }
 
 iframe {
-    padding: 50px 120px!important;
-    border-radius: 15px!important;
+    padding: 50px 80px!important;
 }
 
  #footerAll {
@@ -36,5 +35,11 @@ iframe {
     .pCol {
         margin-right: 50px !important;
         margin-left: 50px!important;
+    }
+}
+
+@media (max-width: 991.98px) { 
+    iframe {
+        padding: 50px 40px!important;
     }
 }
