--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -11,10 +11,8 @@
   
       <div class="offcanvas offcanvas-end text-bg-Light" tabindex="-1" id="offcanvasNavbarDark" aria-labelledby="offcanvasNavbarDarkLabel">
         <div class="offcanvas-body pt-5">
-
-
-{# GALERE #}
             <img src="{{ asset('ClunyTextWhite.png') }}" id="menuLogo">
+            <div class="navbar fixed-top">
             <div class="square rounded menuButtonIn">
               <button class="navbar-toggler me-3 border-0 shadow-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarDark" aria-controls="offcanvasNavbarDark" aria-label="Toggle navigation">
                 <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="#0059C6" class="bi bi-x" viewBox="0 0 16 16">
@@ -22,11 +20,8 @@
                 </svg>
               </button>
             </div>
-
-
-
-          <hr class="border border-white opacity-100 border-1 m-5">
-          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 pt-5 ps-3">
+          </div>
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 pt-5 ps-3 mt-5">
             <li class="nav-item">
               <a class="nav-link text-white fs-5" href="/">Accueil</a>
             </li>
@@ -47,7 +42,10 @@
             </li>
             <hr class="border border-white opacity-100 border-1 m-5">
             {% if is_granted('ROLE_ADMIN') %}
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="/admin">Gestion admin</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="/admin"><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="red" class="bi bi-key" viewBox="0 0 16 16">
+                  <path d="M0 8a4 4 0 0 1 7.465-2H14a.5.5 0 0 1 .354.146l1.5 1.5a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0L13 9.207l-.646.647a.5.5 0 0 1-.708 0L11 9.207l-.646.647a.5.5 0 0 1-.708 0L9 9.207l-.646.647A.5.5 0 0 1 8 10h-.535A4 4 0 0 1 0 8zm4-3a3 3 0 1 0 2.712 4.285A.5.5 0 0 1 7.163 9h.63l.853-.854a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.793-.793-1-1h-6.63a.5.5 0 0 1-.451-.285A3 3 0 0 0 4 5z"/>
+                  <path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                </svg></a></li>
             {% endif %}
   
           </ul>
