--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -4,19 +4,20 @@
 
 <section class="container d-flex" id="home">
     <div class="row">
-        <div class="col-lg-6" id="homeDescription" style="background-image: url('{{ asset("test.jpg") }}')">
-            <h1 class="display-4 fst-italic text-center text-white">La Clunysoise c'est</h1>
-            <div class="text-center pt-5" id="compteur">
-                <span class="countText fw-bold"><span class="count fw-bold">421 </span> Intervention ainsi que </span>
-                <span class="countText fw-bold"><span class="count fw-bold">45 </span> Urgences par jour,</span>
-                <span class="countText fw-bold"><span class="count fw-bold">28 </span> Salarié </span>
-                <span class="countText fw-bold"><span class="count fw-bold">5 </span> Ambulances </span>
-                <span class="countText fw-bold"><span class="count fw-bold">10 </span> VSL </span>
-                <span class="countText fw-bold"><span class="count fw-bold">8 </span> Taxi</span>
-              </div>
-            <p class="lead text-center text-white pe-5 ps-5">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
+        <div class="col-lg-6 d-flex justify-content-center align-items-center" id="homeDescription" style="background-image: url('{{ asset("test.jpg") }}')">
+            <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100%;">
+                <h1 class="display-4 fst-italic text-white">La Clunysoise c'est</h1>
+                <div class="text-center pt-5" id="compteur">
+                    <span class="countText fw-bold"><span class="count fw-bold">421 </span> Intervention ainsi que </span>
+                    <span class="countText fw-bold"><span class="count fw-bold">45 </span> Urgences par jour,</span>
+                    <span class="countText fw-bold"><span class="count fw-bold">28 </span> Salarié </span>
+                    <span class="countText fw-bold"><span class="count fw-bold">5 </span> Ambulances </span>
+                    <span class="countText fw-bold"><span class="count fw-bold">10 </span> VSL </span>
+                    <span class="countText fw-bold"><span class="count fw-bold">8 </span> Taxi</span>
+                </div>
+                <p class="lead text-white text-center ps-3 pe-3">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
+            </div>
         </div>
-
         <div class="col-lg-6">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div id="carousel" class="carousel-inner text-center">
