--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -6,10 +6,15 @@
 
 <h1 class="text-center"> Vos Rendez - vous </h1>
 
-<div class="example-wrapper">
+<div class="container">
+    <section class="row border-top">
 
-{{ form(formulaire)}}
+        <div class="col-10 offset-1">
 
+        {{ form(formulaire)}}
+
+        </div>
+    </section>
 </div>
 
 {% endblock %}
