--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -5,18 +5,19 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10998.152493979294!2d4.6545993!3d46.4380336!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1689589206519!5m2!1sfr!2sfr" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     
-    <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top justify-content-center" id="footer">
+    <footer class="row py-5 my-5 border-top justify-content-center" id="footer">
 
         <div class="col-lg-4 mb-3 pCol">
             <img class="pb-3" id="logo" src="{{ asset('footerLogo.png') }}">
-            <p class="nav-item mb-2"><a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary">7 Avn.Pierre le Vénérable, 71250 Cluny</a></p>
+            <br>
+            <p class="nav-item mb-2"><a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary">7 Avn.Pierre le Vénérable, 71250 Cluny</a></p><br>
             <p class="text-body-secondary">&copy; 2023</p>
         </div>
 
 
         <div class="col-lg-4 mb-3 pCol">
             <h5>Coordonnées</h5>
-            <hr class="border border-white opacity-100 border-1 ms-5 me-5">
+            <hr class="border border-white opacity-100 border-1">
             <ul class="nav flex-column">
                 <li class="nav-item mb-2"><a href="tel:+33385590487" class="nav-link p-0 text-body-secondary">03 85 59 04 87</a></li>
                 <li class="nav-item mb-2"><a href="tel:+33677658774" class="nav-link p-0 text-body-secondary">06 77 65 87 74</a></li>
@@ -24,9 +25,9 @@
             </ul>
         </div>
 
-        <div class="col-md-lg 4-3 pCol">
+        <div class="col-lg-4 mb-3 pCol">
             <h5>Informations</h5>
-            <hr class="border border-white opacity-100 border-1 ms-5 me-5">
+            <hr class="border border-white opacity-100 border-1">
             <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Nos formations et certifications</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Conditions de prise en charge</a></li>
