update form (message succes)

--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -13,6 +13,12 @@
 
         {{ form(formulaire)}}
 
+        {% for flashMessage in app.flashes('success') %}
+            <div class="alert alert-success m-5">
+                {{ flashMessage }}
+            </div>
+        {% endfor %}
+
         </div>
     </section>
 </div>
