--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -73,7 +73,7 @@
         <button type="button" class="btn bg-primary"><a class="text-white text-decoration-none" href="/vos-rendez-vous">Prenez Rendez-Vous</a></button>
         <button type="button" class="btn bg-primary"><a class="text-white text-decoration-none" href="/nous-rejoindre">Rejoignez Nous</a></button>
     </section>
-    <h2 class="text-center pt-5">Nos services</h2>
+    <h2 class="text-center pt-5">Amublance La Clunysoise Actus</h2>
     <div class="container">
         <div class="row justify-content-center">
             {% set switchBox = false %}
