--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -23,7 +23,7 @@
                 <div id="carousel" class="carousel-inner text-center">
                     <div class="carousel-item active">
                         <a href="/a-propos">
-                            <div class="d-flex justify-content-center align-items-center">
+                            <div class="d-flex justify-content-center align-items-center d-block w-100">
                                 <img src="{{ asset('car1.jpg') }}" class="d-block w-100 center-block" alt="..." style="filter: grayscale(.5)">
                             </div>
                             <div class="carousel-caption d-none d-md-block">
@@ -34,10 +34,10 @@
                     </div>
                     <div class="carousel-item">
                         <a href="/a-propos">
-                            <div class="d-flex justify-content-center align-items-center">
-                                <img src="{{ asset('car2.jpg') }}" class="d-block w-100 center-block" alt="..." style="filter: grayscale(.5)"> 
+                            <div class="d-flex justify-content-center align-items-center d-block w-100">
+                                <img src="#" class="d-block w-100 center-block" alt="..." style="filter: grayscale(.5)"> 
                             </div>
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption d-none d-md-block text-dark">
                                 <h2> VSL </h2>
                                 <p>Nos vehicules sanitaires légers</p>
                             </div>
@@ -45,10 +45,10 @@
                     </div>
                     <div class="carousel-item">
                         <a href="/a-propos">
-                            <div class="d-flex justify-content-center align-items-center">
-                                <img src="{{ asset('car3.jpg') }}" class="d-block w-100 center-block" alt="..." style="filter: grayscale(.5)">
+                            <div class="d-flex justify-content-center align-items-center d-block w-100">
+                                <img src="#" class="d-block w-100 center-block" alt="..." style="filter: grayscale(.5)">
                             </div>
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption d-none d-md-block text-dark">
                                 <h2> Taxi </h2>
                                 <p>Nos taxis</p>
                             </div>
