--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -98,3 +98,50 @@
     margin: 35px;
     border-radius: 25px;
 }
+
+
+
+.animate-text
+{
+    opacity:0;
+    transition: all 0.6s ease-in-out;
+}
+
+.tile .text
+{
+    position:absolute;
+    padding:30px;
+    height:calc(100% - 60px);
+}
+
+.tile h1
+{
+    color: white !important;
+    text-decoration: none !important;
+    text-align: center;
+    font-weight:300;
+    margin:20px 0 0 0;
+    transform: translateX(200px);
+}
+
+.tile p
+{
+    font-weight:300;
+    margin:20px 0 0 0;
+    line-height: 25px;
+    transform: translateX(-200px);
+    transition-delay: 0.2s;
+}
+
+.boxOne:hover,
+.boxTwo:hover
+{
+    box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
+    transform:scale(1.05);
+}
+
+.tile:hover .animate-text
+{
+    transform:translateX(0);
+    opacity:1;
+}
