--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -81,22 +81,24 @@
             {% for posts in post %}
                 {% if loop.index is odd %}
                     {% if switchBox %}
-                        <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}" class="box-image d-flex align-items-center justify-content-center text-decoration-none boxTwo" style="background-image:linear-gradient(rgba(58, 58 ,58 ,0.3), rgba(58, 58 ,58 , 0.6)), url('upload/images/{{ asset(posts.mediaUrl) }}')">
+                        <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}" class="box-image tile d-flex align-items-center justify-content-center text-decoration-none boxTwo" style="background-image:linear-gradient(rgba(58, 58 ,58 ,0.3), rgba(58, 58 ,58 , 0.6)), url('upload/images/{{ asset(posts.mediaUrl) }}')">
                     {% else %}
-                        <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}" class="box-image d-flex align-items-center justify-content-center text-decoration-none boxOne" style="background-image:linear-gradient(rgba(58, 58 ,58 ,0.3), rgba(58, 58 ,58 , 0.6)), url('upload/images/{{ asset(posts.mediaUrl) }}')">
+                        <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}" class="box-image tile d-flex align-items-center justify-content-center text-decoration-none boxOne" style="background-image:linear-gradient(rgba(58, 58 ,58 ,0.3), rgba(58, 58 ,58 , 0.6)), url('upload/images/{{ asset(posts.mediaUrl) }}')">
                     {% endif %}
                         <div>
-                            <p class="text-white">{{ posts.description | striptags | slice(0, 310)}}</p>
+                            <h1 class="animate-text">{{ posts.title }}</h1>
+                            <p class="animate-text text-white">{{ posts.description | striptags | slice(0, 310)}}</p>
                         </div>
                     </a>
                 {% else %}
                     {% if switchBox %}
-                        <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}" class="box-image d-flex align-items-center justify-content-center text-decoration-none boxOne" style="background-image:linear-gradient(rgba(58, 58 ,58 ,0.3), rgba(58, 58 ,58 , 0.6)), url('upload/images/{{ asset(posts.mediaUrl) }}')">
+                        <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}" class="box-image tile d-flex align-items-center justify-content-center text-decoration-none boxOne" style="background-image:linear-gradient(rgba(58, 58 ,58 ,0.3), rgba(58, 58 ,58 , 0.6)), url('upload/images/{{ asset(posts.mediaUrl) }}')">
                     {% else %}
-                        <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}" class="box-image d-flex align-items-center justify-content-center text-decoration-none boxTwo" style="background-image:linear-gradient(rgba(58, 58 ,58 ,0.3), rgba(58, 58 ,58 , 0.6)), url('upload/images/{{ asset(posts.mediaUrl) }}')">
+                        <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}" class="box-image tile d-flex align-items-center justify-content-center text-decoration-none boxTwo" style="background-image:linear-gradient(rgba(58, 58 ,58 ,0.3), rgba(58, 58 ,58 , 0.6)), url('upload/images/{{ asset(posts.mediaUrl) }}')">
                     {% endif %}
                         <div>
-                            <p class="text-white">{{ posts.description | striptags | slice(0, 310)}}</p>
+                            <h1 class="animate-text">{{ posts.title }}</h1>
+                            <p class="animate-text text-white">{{ posts.description | striptags | slice(0, 310)}}</p>
                         </div>
                     </a>
                 {% endif %}
