--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -107,21 +107,12 @@
     transition: all 0.6s ease-in-out;
 }
 
-.tile .text
-{
-    position:absolute;
-    padding:30px;
-    height:calc(100% - 60px);
-}
-
 .tile h1
 {
     color: white !important;
     text-decoration: none !important;
-    text-align: center;
+    text-align: center!important;
     font-weight:300;
-    margin:20px 0 0 0;
-    transform: translateX(200px);
 }
 
 .tile p
