--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Ambulance La Clynysoise{% endblock %}</title>
         <link rel="icon" type="image/svg" href="{{ asset('favicon.svg') }}"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -18,6 +19,12 @@
     <body>
         {% block body %}
         <script src="https://kit.fontawesome.com/f785a57bb7.js" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+        <script>
+            new WOW().init();
+        </script>
+
+
         {% endblock %}
     </body>
     {{ include("footer.html.twig") }}
