update about / contact / join margin

--- a/assets/styles/_join.scss
+++ b/assets/styles/_join.scss
@@ -1,18 +1,14 @@
-.join_form {
-    margin: 20rem!important;
-}
-
 .join_boxone {
-    margin-top: 5rem!important;
-    margin-left: 1rem!important;
-    margin-right: 1rem!important;
+    margin-top: 0rem!important;
+    margin-left: 10rem!important;
+    margin-right: 10rem!important;
     max-height: 100vh!important;
     overflow: hidden;
 }
 
 .join_boxone img {
     padding: 0;
-    margin: 10px!important;
+    margin: 10x!important;
     margin-left: 0;
     margin-right: 0;
     max-width: 700px!important;
