--- a/templates/main/join.html.twig
+++ b/templates/main/join.html.twig
@@ -52,8 +52,17 @@
 
 <div class="container">
     <section class="row border-top">
+        <div class="col-6 mt-5">
 
-        <div class="col-10 offset-1">
+            <h2></h2>
+            <p class="text-body-secondary mt-5"><a href="tel:+33385590487" class="nav-link p-0 text-body-secondary">Tèl : 03 85 59 04 87</a></p>
+            <p class="text-body-secondary mt-5"><a href="tel:+33677658774" class="nav-link p-0 text-body-secondary">Tèl : 06 77 65 87 74</a></p>
+            <p class="text-body-secondary mt-5"><a href="mailto:la.clunysoise@orange.fr" class="nav-link p-0 text-body-secondary">E-mail : la.clunysoise@orange.fr</a></p>
+            <p class="nav-item mb-2 mt-5"><a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary">7 Av. Pierre le Vénérable, 71250 Cluny</a></p>
+
+        </div>
+
+        <div class="col-6">
 
         {{ form(formulaire)}}
 
@@ -62,7 +71,6 @@
                 {{ flashMessage }}
             </div>
         {% endfor %}
-
         </div>
     </section>
 </div>
