--- a/assets/styles/_about.scss
+++ b/assets/styles/_about.scss
@@ -1,7 +1,7 @@
 .about_boxone {
     margin-top: 5rem!important;
-    margin-left: 1rem!important;
-    margin-right: 1rem!important;
+    margin-left: 10rem!important;
+    margin-right: 10rem!important;
     max-height: 100vh!important;
     overflow: hidden;
 }
@@ -17,7 +17,7 @@
 }
 
 .about_boxone h1 {
-    margin: 0.8rem;
+    margin: 0.8rem!important;
 }
 
 .about_boxone p {
