--- a/templates/main/about.html.twig
+++ b/templates/main/about.html.twig
@@ -2,6 +2,7 @@
 
 
 {% block body %}
+<h1 class="text-center">Ambulance La Clunysoise</h1>
 
 {% set counter = 0 %}
 
@@ -10,6 +11,7 @@
     {% if counter is divisible by(2) %}
 
         <section class="about_boxone">
+            
             <div class="row">
 
                 <div class="col-5 d-flex justify-content-center align-middle">
@@ -18,6 +20,7 @@
                     {% endif %}
                 </div>
 
+            
                 <div class="col-7">
                     <h1 class="text-center">{{ posts.title }}</h1>
                     <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
@@ -29,6 +32,7 @@
         {% else %}
 
         <section class="about_boxone">
+            
             <div class="row">
 
                 <div class="col-7">
