Big update Home

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -18,16 +18,16 @@
               <a class="nav-link text-white fs-5" href="/">Accueil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white fs-5" href="/a-propos">A Propos</a>
+              <a class="nav-link text-white fs-5" href="/a-propos">Notre Identitée</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white fs-5" href="/prise-en-charge">Conditions de prise en charge</a>
+              <a class="nav-link text-white fs-5" href="/prise-en-charge">Prise en charge - Tarification</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white fs-5" href="/nous-rejoindre">Nous rejoindre</a>
+              <a class="nav-link text-white fs-5" href="/nous-rejoindre">Rejoignez - nous</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white fs-5" href="/vos-rendez-vous">Vos rendez-vous</a>
+              <a class="nav-link text-white fs-5" href="/vos-rendez-vous">Vos rendez - vous</a>
             </li>
             <li class="nav-item pb-5">
               <a class="nav-link text-white fs-5" href="/contact">Contacts</a>
