--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -4,15 +4,62 @@
     --bs-gutter-x: 0!important;
 }
 
+
+// -------------------- Home --------------------
 #home {
     --bs-gutter-x: 0!important;
     background-color: #ffffff;
     max-width: 100vw;
-    height: 100vh!important;
+    height: 70vh!important;
 }
 
 #home h1 {
     margin-top: 150px!important;
+}
+
+#home p {
+    margin-top: 100px!important;
+}
+
+
+// -------------------- Home Buttons--------------------
+#home-buttons {
+    width: 50vw!important;
+    height: 30vh!important;
+    z-index: 5
+}
+
+#buttons {
+    position: sticky!important;
+    margin-bottom: 2rem!important;
+    background-color: white!important;
+}
+
+.btn {
+    margin: 5rem!important;
+    padding: 1rem!important;
+}
+
+#buttons button:hover, 
+#buttons button:focus {
+    background-color: #5C84B7!important;
+}
+
+
+// -------------------- Home Text --------------------
+#home-text img {
+    width: 50vw!important;
+    height: 30vh!important;
+    z-index: 2!important;
+}
+
+
+// -------------------- Home Description --------------------
+#home_description {
+    width: 50vw!important;
+    height: 70vh!important;
+    background-color: white!important;
+    z-index: 5
 }
 
 .boxOne, .boxTwo {
@@ -23,33 +70,48 @@
   transform: scale(1.05);
 }
 
-#home p {
-    margin-top: 100px!important;
-}
 
-#homeDescription {
+// -------------------- Home Carrousel --------------------
+#home_carrousel img {
     width: 50vw!important;
-    height: 100vh!important;
-}
-
-.carousel-inner img {
-    width: 50vw!important;
-    height: 100vh!important
+    height: 70vh!important;
+    z-index: 2;
 }
 
 
-#buttons {
-    margin-bottom: 2rem!important;
+// -------------------- Grid Gallery --------------------
+#grid_gallery {
+    margin-top: 20rem!important;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
 }
 
-#buttons button:hover, 
-#buttons button:focus {
-    background-color: #5C84B7!important;
+#grid_gallery img {
+    max-width: 300px;
+    max-height: 330px;
+    margin: 10px;   
 }
 
-.btn {
-    margin: 5rem!important;
-    padding: 1rem!important;
+#grid_gallery p {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center!important;
+}
+
+
+// -------------------- Box --------------------
+.box {
+    align-items: center;
+    justify-content: center;
+  }
+  
+.box-image {
+    background-size:cover;
+    background-position: center center;
+    margin: 35px;
+    border-radius: 25px;
 }
 
 .boxOne {
@@ -68,39 +130,8 @@
     background-position: center center;
 }
 
-#gridGallery {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-}
 
-#gridGallery img {
-    max-width: 300px;
-    max-height: 330px;
-    margin: 10px;   
-}
-
-#gridGallery p {
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center!important;
-}
-
-.box {
-    align-items: center;
-    justify-content: center;
-  }
-  
-.box-image {
-    background-size:cover;
-    background-position: center center;
-    margin: 35px;
-    border-radius: 25px;
-}
-
-
-
+// -------------------- Grid Gallery Animation --------------------
 .animate-text
 {
     opacity:0;
@@ -127,7 +158,6 @@
 .boxOne:hover,
 .boxTwo:hover
 {
-    box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
     transform:scale(1.05);
 }
 
