update home css

--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -26,7 +26,6 @@
 #home-buttons {
     width: 50vw!important;
     height: 30vh!important;
-    z-index: 5
 }
 
 #buttons {
@@ -131,7 +130,7 @@
 }
 
 
-// -------------------- Grid Gallery Animation --------------------
+// -------------------- Gallery Animation --------------------
 .animate-text
 {
     opacity:0;
