--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -131,8 +131,8 @@
     </div>
 </section>
 
-<h2 class="pb-3 pt-3 text-center bg-transparent">Où nous trouver</h2>
-<div class="row rounded">
+<div class="row rounded bg-transparent">
+<h2 class="pb-3 pt-3 text-center ">Où nous trouver</h2>
     <iframe class="google_home" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10998.152493979294!2d4.6545993!3d46.4380336!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1689589206519!5m2!1sfr!2sfr" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 
