--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -23,7 +23,7 @@
 
 
 // -------------------- Home Buttons--------------------
-#home-buttons {
+#home_buttons {
     width: 50vw!important;
     height: 30vh!important;
 }
@@ -46,7 +46,7 @@
 
 
 // -------------------- Home Text --------------------
-#home-text img {
+#home_text {
     width: 50vw!important;
     height: 30vh!important;
     z-index: 2!important;
