--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -52,16 +52,17 @@
             </div>
         </div>
 
-        <div class="col-6" id="home-buttons">
-            <section class="d-flex justify-content-center" id="buttons">
+        <div class="col-6" id="home_buttons">
+            <div class="d-flex justify-content-center" id="buttons">
+
                 <button type="button" class="btn bg-primary"><a class="text-white text-decoration-none" href="/contact">Contactez Nous</a></button>
                 <button type="button" class="btn bg-primary"><a class="text-white text-decoration-none" href="/vos-rendez-vous">Prenez Rendez-Vous</a></button>
                 <button type="button" class="btn bg-primary"><a class="text-white text-decoration-none" href="/nous-rejoindre">Rejoignez Nous</a></button>
-            </section>
+
+            </div>
         </div>
 
-        <div class="col-6">
-
+        <div class="col-6" id="home_text">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner text-center">
 
@@ -85,7 +86,6 @@
 
                 </div>
             </div>
-
         </div>
 
     </div>
